# fs.imapfs

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py  test_imapfs.py
fs/: imapfs.py
fs/imapfs/: __init__.py  imapfs.py
src/: imapfs.py
src/fs/: imapfs.py
src_test/: Test_imapfs.py
tests/: Test_imapfs.py  __init__.py
