[metadata]
name = fs.imapfs
version = 0.1.4
author = Andrea Maggi
author-email = andrea@maggicontrols.com
home-page = http://github.com/Maggi-Andrea/fs.imapfs
description = Pyfilesystem2 implementation for Imap
long-description = file: README.md
license = MIT
platform = any
keywords = filesystem, Pyfilesystem2, imap
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Internet
  Topic :: Security
  Topic :: Software Development :: Libraries :: Python Modules
  Topic :: System :: Filesystems

[options]
zip_safe = true
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*, != 3.3.*
packages = fs.imapfs
test_suite = tests
setup_requires = setuptools
install_requires =
  fs==2.1.2
  IMAPClient
tests_require =
  fs.imapfs[test]

[bdist_wheel]
universal = 1
