[metadata]
name = fs.imapfs
version = 0.2.2
author = Andrea Maggi
author_email = andrea@maggicontrols.com
url = http://github.com/Maggi-Andrea/fs.imapfs
description = Pyfilesystem2 implementation for Imap
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any
keywords = filesystem, Pyfilesystem2, imap
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Internet
  Topic :: Security
  Topic :: Software Development :: Libraries :: Python Modules
  Topic :: System :: Filesystems

[options]
zip_safe = true
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*, != 3.3.*
packages = fs
test_suite = test_imapfs
setup_requires = setuptools
install_requires =
  fs==2.4.16
  IMAPClient
  importlib_metadata
tests_require =
  fs.imapfs[tests]

[bdist_wheel]
universal = 1
